fix: optimize images and <pre> text-wrap

--- a/styles/_normalize.scss
+++ b/styles/_normalize.scss
@@ -54,6 +54,7 @@ hr {
 pre {
     font-family: monospace, monospace; /* 1 */
     font-size: 1em; /* 2 */
+    text-wrap: pretty;
 }
 
 /* Text-level semantics
